Fix column wrap at mid-width conflicts between WP and Bootstrap.

--- a/resources/assets/styles/gutenburg/_wp-block-column.scss
+++ b/resources/assets/styles/gutenburg/_wp-block-column.scss
@@ -1,4 +1,10 @@
 .wp-block-columns {
+  flex-wrap: nowrap;
+
+  @include respond(xs) {
+    flex-wrap: wrap;
+  }
+
   .wp-block-column {
     margin-bottom: 0;
     flex-basis: calc(50% - 33px);
